syntax = "proto3";

option csharp_namespace = "DataBaseService.Protos";

message BaseResponse{
  string  state = 1;
  int32  code = 2;
}

message BotResponse{
   int32  id = 1;
   string tg_token = 2;
   string google_token = 3;
   int32 owner = 4;
   int32 bot_survey_id =5;
   string start_message = 6;
   string state = 7;
   int32 code =8;
   string end_message = 9;

}
message BotsResponse{
	repeated BotResponse bots=1;
}

message Module {
	string question = 1;
	string answer_type = 2;
	string title = 3;
	repeated Button buttons = 4;
	int32 next_id = 5;
}

message Answer{
	int32 module_id = 1;
	string answer = 2;
}

message Journal
{
	map<int32, Module> modules = 1; 
}

message User{
	string title = 1;
	string description =2;
	string contact =3 ;
}

message Button{
	string answer = 1;
	int32 next_id =2;
}

message UserResponse{
	string title = 1;
	string description =2;
	string contact =3 ;
	string state = 4;
	int32  code =5;

}